separation des cti dans un autre cron task et changement des instanceId de voice post et data post

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -67,7 +67,7 @@ crontasks +=
 // Chargement de IN ZTE DATA_POST
 crontasks +=
   {
-    instanceId = "LOAD_IT_DATA_POST_v02",
+    instanceId = "LOAD_IT_CRA_GPRS_POST",
     cron = "0 0-20/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-data-post.conf",
     taskType = "HIVE"
@@ -82,7 +82,7 @@ crontasks +=
 // Chargement de IN ZTE VOICE_SMS_POST
 crontasks +=
   {
-    instanceId = "LOAD_IT_VOICE_SMS_POST_v02",
+    instanceId = "LOAD_IT_BILLED_POST",
     cron = "0 25-50/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-voice_sms_post.conf",
     taskType = "HIVE"
@@ -676,560 +676,3 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
-
-
- //Archivage des données IN_ZTE + LOGS NIFI
-crontasks +=
-  {
-    instanceId = "PIG_COMPRESS_ARCH",
-    cron = "0 35 */6 * * ?",
-    configFile = "/PROD/CONF/PIG/pig-compress-arch.conf",
-    taskType = "PIG"
-    taskLauncher = ${PIG_SCRIPT_LAUNCHER}
-    timeout = "200 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.PigScriptLauncher"}
-    ]
-  }
-
-
-//COLLECTE CTI
-
-crontasks +=
-  {
-    instanceId = "LOAD_IT_SM_RES_STATE_REASON_FACT",
-    cron = "30 0 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-it-sm-res-state-reason-fact.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_IT_SM_STATE_FACT",
-    cron = "30 5 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-it-sm-res-state-fact.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_IT_SM_RES_SESSION_FACT",
-    cron = "30 10 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-it-sm-res-session_fact.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_IT_DT_INTERACTION_TYPE",
-    cron = "30 15 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-interaction-type.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_IT_DT_INTERACTION_RESOURCE_STATE",
-    cron = "30 20 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-interaction-resource-state.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_IT_DT_INTERACTION_DESCRIPTOR",
-    cron = "30 25 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-interaction-descriptor.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_IT_DT_GROUP",
-    cron = "30 30 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-group.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_IT_DT_DATE_TIME",
-    cron = "30 35 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-date-time.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_IT_DT_CTL_AUDIT_LOG",
-    cron = "30 40 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-ctl-audit-log.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_GLOB_GIDB_G_PARTY_V",
-    cron = "30 45 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-glob-gidb-g-party-v.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_GLOB_GIDB_G_PARTY_HISTORY_V",
-    cron = "30 50 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-glob-gidb-g-party-history-v.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_GLOB_GIDB_G_CALL_V",
-    cron = "30 55 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-glob-gidb-g-call.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_FT_RESOURCE_SKILL_FACT",
-    cron = "30 59 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-ft-resource-skill-fact.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_FT_RESOURCE_GROUP_FACT",
-    cron = "30 5 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-ft-resource-group-fact.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_FT_MEDIATION_SEGMENT_FACT",
-    cron = "30 10 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-ft-mediation-segment-fact.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_FT_IXN_RESOURCE_STATE_FACT",
-    cron = "30 15 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-ft-ixn-resource-state-fact.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_FT_IRF_USER_DATA_KEYS",
-    cron = "30 30 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-ft-irf-user-data-keys.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_FT_IRF_USER_DATA_CUST_1",
-    cron = "30 35 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-ft-irf-user-data-cust-1.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_FT_INTERACTION_RESOURCE_FACT",
-    cron = "30 40 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-ft-interaction-resource-fact.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_FT_INTERACTION_FACT",
-    cron = "30 45 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-ft-interaction-fact.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_RESOURCE_GROUP_COMBINATION",
-    cron = "30 50 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-resource-group-combination.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_REQUESTED_SKILL_COMBINATION",
-    cron = "30 55 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-requested-skill-combination.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_REQUESTED_SKILL",
-    cron = "30 59 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-requested-skill.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_PLACE",
-    cron = "30 0 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-place.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_MEDIA_TYPE",
-    cron = "30 5 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-media-type.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_RESOURCE",
-    cron = "30 10 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-resource.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_STRATEGY",
-    cron = "30 15 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-strategy.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_ROUTING_TARGET",
-    cron = "30 20 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-routing-target.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_RESOURCE_STATE_REASON",
-    cron = "30 25 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-ressources-state-reason.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_RESOURCE_STATE",
-    cron = "30 30 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-ressources-state.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_TECHNICAL_DESCRIPTOR",
-    cron = "30 35 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-technical-descriptor.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_USER_DATA_CUST_DIM_1",
-    cron = "30 40 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-user-data-cust-dim-1.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_USER_DATA_CUST_DIM_2",
-    cron = "30 45 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-user-data-cust-dim-2.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_USER_DATA_CUST_DIM_3",
-    cron = "30 50 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-user-data-cust-dim-3.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_USER_DATA_CUST_DIM_4",
-    cron = "30 59 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-user-data-cust-dim-4.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_DT_USER_DATA_CUST_DIM_5",
-    cron = "30 11 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-dt-user-data-cust-dim-5.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
