--- a/PROD/CONF/IN_ZTE/IT/load-it-voice_sms_post.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-voice_sms_post.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_IT_VOICE_SMS_POST_v02"
+flux.name = "LOAD_IT_BILLED_POST"
 
 flux.has-date-processing = false
 
