mise à jour du scheduling

--- a/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_FT_VOICE_SMS_POST"
+flux.name = "LOAD_FT_BILLED_TRANSACTION_POST"
 
 flux.has-date-processing = true
 
