--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -37,7 +37,7 @@ crontasks +=
 // Chargement FT IN ZTE VOICE_SMS_POST
 crontasks +=
   {
-    instanceId = "LOAD_FT_VOICE_SMS_POST",
+    instanceId = "LOAD_FT_BILLED_TRANSACTION_POST",
     cron = "0 2 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf",
     taskType = "HIVE"
