calcul ft_agent_session

--- a/PROD/CONF/CTI/FT/load-ft-agent-session.conf
+++ b/PROD/CONF/CTI/FT/load-ft-agent-session.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_FT_AGROUP_APPEL"
+flux.name = "LOAD_FT_AGENT_SESSION"
 
 flux.has-date-processing = true
 
@@ -17,13 +17,12 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CTI/FT_AGROUP_APPEL/prequery_ft_agroup_appel.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CTI/FT_AGENT_SESSION/prequery_ft_agent_session.hql"
 
-flux.exec-queries += "/PROD/SCRIPTS/FT/CTI/FT_AGROUP_APPEL/compute_and_insert_into_ft_agroup_appel.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/CTI/FT_AGENT_SESSION/compute_and_insert_into_ft_agent_session.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
-flux.hive.extra-conf += "--hivevar time_zone=Africa/Douala"
 
