Added new config to avoid network timeout

--- a/PROD/CONF/streaming-cron-tasks.conf
+++ b/PROD/CONF/streaming-cron-tasks.conf
@@ -36,6 +36,9 @@ crontasks +=
       , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
       , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      ,{"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
+
