update compute others missings files

--- a/PROD/CONF/MONITORING/compute_ft_daily_status.conf
+++ b/PROD/CONF/MONITORING/compute_ft_daily_status.conf
@@ -6,14 +6,14 @@ flux.name = "COMPUTE_FT_DAILY_STATUS"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -7
+flux.slice-begin-value = -11
 flux.slice-end-value = 0
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-date-format = "yyyy-MM-dd"
 
-flux.has-pre-queries = true
+flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
