detachement de gms traffic revenue de voice_sms dans les conf

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -425,6 +425,21 @@ crontasks +=
     ]
   }
 
+// Chargement FT IN ZTE VOICE_SMS_POST
+crontasks +=
+  {
+    instanceId = "LOAD_FT_GSM_TRAFFIC_REVENUE_DAILY",
+    cron = "0 41 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-gsm-traffic-revenue-daily.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "30 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
 
 // CALCUL DES FICHIERS MANQUANTS EXTRACT
 crontasks +=
@@ -456,6 +471,7 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
 
 //// CALCUL DES FICHIERS COMPUTE_FT_DAILY_STATUS
 crontasks +=
