--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -140,19 +140,19 @@ crontasks +=
   }
 
 // Chargement FT_A IN ZTE GPRS ACTIVITY
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_A_GPRS_ACTIVITY",
-//    cron = "0 35 */1 * * ?",
-//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "30 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+crontasks +=
+  {
+    instanceId = "LOAD_FT_A_GPRS_ACTIVITY",
+    cron = "0 35 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "30 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 // Chargement FT IN ZTE DATA_TRANSFER
 crontasks +=
