update completude IN

--- a/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf
@@ -48,6 +48,8 @@ flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_ADJUSTMENT"
 flux.hive.extra-conf += "--hivevar it_partition_column=CREATE_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=20"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
+flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_2"
+
 
 
 
