--- a/PROD/CONF/IN_ZTE/FT/load-ft-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-data.conf
@@ -39,6 +39,7 @@ flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_DATA"
 flux.hive.extra-conf += "--hivevar it_partition_column=START_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=60"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
+flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_2"
 
 
 flux.hive.extra-conf += "--hivevar table_type=FT"
