--- a/PROD/CONF/IN_ZTE/FT/load-ft-emergency-credit-activity.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-emergency-credit-activity.conf
@@ -43,6 +43,8 @@ flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_EMERGENCY_DATA"
 flux.hive.extra-conf += "--hivevar it_partition_column=TRANSACTION_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=3"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
+flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_2"
+
 
 
 
