--- a/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf
@@ -40,6 +40,7 @@ flux.hive.extra-conf += "--hivevar cdr_type=ZTE_SUBSCRIPTION_CDR"
 flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_SUBSCRIPTION"
 flux.hive.extra-conf += "--hivevar it_partition_column=CREATEDDATE"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
+flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_2"
 
 
 
