--- a/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf
@@ -51,6 +51,8 @@ flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_VOICE_SMS_POST"
 flux.hive.extra-conf += "--hivevar it_partition_column=START_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=7"
 flux.hive.extra-conf += "--hivevar flux_type=POSTPAID"
+flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_POSTPAID_2"
+
 
 
 
