--- a/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf
@@ -49,6 +49,7 @@ flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_DATA_POST"
 flux.hive.extra-conf += "--hivevar it_partition_column=START_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=60"
 flux.hive.extra-conf += "--hivevar flux_type=POSTPAID"
+flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_POSTPAID_2"
 
 
 flux.hive.extra-conf += "--hivevar table_type=FT"
