--- a/PROD/CONF/IN_ZTE/FT/load-kpi-adjustement.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-kpi-adjustement.conf
@@ -39,3 +39,5 @@ flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_ADJUSTMENT"
 flux.hive.extra-conf += "--hivevar it_partition_column=CREATE_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=7"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
+flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_2"
+
