turn off all insertion in revenu summary

--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf
@@ -25,7 +25,7 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/compute_and_insert_into_f
 
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_data_transfer_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_data_transfer.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_data_transfer.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
