--- a/PROD/CONF/IN_ZTE/FT/load-ft-gsm-traffic-revenue-daily.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-gsm-traffic-revenue-daily.conf
@@ -35,7 +35,7 @@ flux.inline.exec-queries += "ALTER TABLE MON.FT_GSM_TRAFFIC_REVENUE_DAILY DROP P
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/GSM_TRAFFIC_REVENUE/insert_into_ft_gsm_traffic_revenue_daily.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gsm_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gsm.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gsm.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
