--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf
@@ -31,7 +31,7 @@ flux.inline.exec-queries += "ANALYZE TABLE MON.FT_CRA_GPRS PARTITION(SESSION_DAT
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_a_gprs_activity.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gprs_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gprs.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gprs.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
