--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-subscription.conf
@@ -22,7 +22,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/prequery_ft_a_sub
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/compute_and_insert_into_ft_a_subscription.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_subsc_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_subsc.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_subsc.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
