--- a/PROD/CONF/IN_ZTE/FT/load-ft-credit-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-credit-transfer.conf
@@ -29,7 +29,7 @@ flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/CREDIT_TRANSFER/compute_and_i
 
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_credit_transfer_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_credit_transfer.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_credit_transfer.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
