--- a/PROD/CONF/IN_ZTE/FT/load-ft-emergency-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-emergency-data.conf
@@ -31,7 +31,7 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EMERGENCY_DATA/compute_and_insert_
 
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EMERGENCY_DATA/compute_and_insert_into_fta_emergency_data.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_emergency_data_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_emergency_data.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_emergency_data.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
