--- a/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf
@@ -28,7 +28,7 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/OVERDRAFT/compute_and_insert_into_
 
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_overdraft_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_overdraft.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_overdraft.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
