--- a/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf
@@ -40,7 +40,7 @@ flux.inline.post-exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/GSM_TRAFFIC_REVENUE/insert_into_ft_gsm_traffic_revenue_post.hql"
 //lux.inline.post-exec-queries += "INSERT INTO FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_GSM_TRAFFIC_REVENUE_POST' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  MON.FT_GSM_TRAFFIC_REVENUE_POST WHERE TRANSACTION_DATE='###SLICE_VALUE###')T"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gsm_post_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gsm_post.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gsm_post.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
