--- a/PROD/CONF/MSC/load-ft-pdm-transaction.conf
+++ b/PROD/CONF/MSC/load-ft-pdm-transaction.conf
@@ -1,4 +1,4 @@
-flux.yarn.queue = "PROD"
+flux.yarn.queue = "DATALAB"
 flux.log-level = "ERROR"
 
 flux.name = "LOAD_FT_PDM_TRANSACTION"
@@ -6,8 +6,8 @@ flux.name = "LOAD_FT_PDM_TRANSACTION"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -164
-flux.slice-end-value = -133
+flux.slice-begin-value = -138
+flux.slice-end-value = -107
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
