--- a/PROD/CONF/PIG/pig-compress-arch.conf
+++ b/PROD/CONF/PIG/pig-compress-arch.conf
@@ -61,7 +61,7 @@ flux.source-dirs+="/PROD/ARCH/ZEBRA/ZEBRA_MASTER/"
 flux.source-dirs+="/PROD/ARCH/ZEBRA/ZEBRA_TRANSAC/"
 
 //MVAS
-//flux.source-dirs+="/PROD/ARCH/MVAS/"
+flux.source-dirs+="/PROD/ARCH/MVAS/"
 
 //BDI
 flux.source-dirs+="/PROD/ARCH/BDI/"
