--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -37,8 +37,37 @@ crontasks +=
 
 crontasks +=
   {
+    instanceId = "LOAD_FT_GROUP_SUBSCRIBER_SUMMARY",
+    cron = "0 2 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-group-subscriber-summary.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "65 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "load-ft-a-subscriber-summary.conf",
+    cron = "0 4 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-subscriber-summary.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "65 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+crontasks +=
+  {
     instanceId = "LOAD_FT_CBM_CUST_INSIGTH_DAILY",
-    cron = "0 7 */2 * * ?",
+    cron = "0 6 */1 * * ?",
     configFile = "/PROD/CONF/CBM/load-ft-cbm-cust-insigth-daily.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
