--- a/PROD/CONF/CBM/load-ft-client-site-traffic-day.conf
+++ b/PROD/CONF/CBM/load-ft-client-site-traffic-day.conf
@@ -21,6 +21,9 @@ flux.exec-query.execution.mode = "JDBC"
 
 flux.inline.exec-queries += "TRUNCATE TABLE MON.TT_CLIENT_CELL_TRAFIC_DAY"
 
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "create temporary function FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_SITE_TRAFFIC_DAY/prequery_ft_client_site_traffic_day.hql"
 
 
