--- a/PROD/CONF/CBM/load-ft-client-last-site-day.conf
+++ b/PROD/CONF/CBM/load-ft-client-last-site-day.conf
@@ -21,11 +21,10 @@ flux.exec-query.execution.mode = "JDBC"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_LAST_SITE_DAY/prequery_ft_client_last_site_day.hql"
 
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "create temporary function fn_format_msisdn_to_9digits as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
+flux.inline.exec-queries += "create temporary function FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 
-flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
-flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
-flux.inline.exec-queries += "set hive.exec.parallel=true"
-flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
 
 flux.inline.exec-queries += "TRUNCATE TABLE MON.TT_CLIENT_LAST_SITE_DAY"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_LAST_SITE_DAY/compute_and_insert_into_ft_client_last_site_day.hql"
