ajout de global activity dans grafana

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -77,3 +77,48 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_VOICE_SMS_DA_USAGE_DAILY",
+    cron = "0 8 */1 * * ?",
+    configFile = "/PROD/CONF/CBM/DA_USAGE_DAILY/load-ft-voice-sms-da-usage-daily.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_DATA_DA_USAGE_DAILY",
+    cron = "0 10 */1 * * ?",
+    configFile = "/PROD/CONF/CBM/DA_USAGE_DAILY/load-ft-data-da-usage-daily.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_CBM_DA_USAGE_DAILY",
+    cron = "0 12 */1 * * ?",
+    configFile = "/PROD/CONF/CBM/DA_USAGE_DAILY/load-ft-cbm-da-usage-dally.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
