move mon.ft_a to agg.ft_a

--- a/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity.conf
+++ b/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity.conf
@@ -40,7 +40,7 @@ flux.hive.extra-conf += "--hivevar date_offset=32"
 
 flux.hive.extra-conf += "--hivevar table_type=FT"
 flux.hive.extra-conf += "--hivevar table_name=FT_ACCOUNT_ACTIVITY"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_ACCOUNT_ACTIVITY"
+flux.hive.extra-conf += "--hivevar database_table_name=AGG.FT_ACCOUNT_ACTIVITY"
 flux.hive.extra-conf += "--hivevar table_partition=EVENT_DATE"
 
 
