--- a/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-a-edr-prpd-eqt.conf
+++ b/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-a-edr-prpd-eqt.conf
@@ -35,5 +35,5 @@ flux.hive.extra-conf += "--hivevar date_offset=20"
 flux.hive.extra-conf += "--hivevar table_type=FTA"
 flux.hive.extra-conf += "--hivevar table_name=FT_A_EDR_PRPD_EQT"
 flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_A_EDR_PRPD_EQT"
+flux.hive.extra-conf += "--hivevar database_table_name=AGG.FT_A_EDR_PRPD_EQT"
 flux.hive.extra-conf += "--hivevar table_partition=EVENT_DAY"
