--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf
@@ -36,7 +36,7 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar table_type=FTA"
 flux.hive.extra-conf += "--hivevar table_name=FT_A_DATA_TRANSFER"
 flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_A_DATA_TRANSFER"
+flux.hive.extra-conf += "--hivevar database_table_name=AGG.FT_A_DATA_TRANSFER"
 flux.hive.extra-conf += "--hivevar table_partition=EVENT_DATE"
 
 
