--- a/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf
@@ -26,7 +26,7 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/compute_and_insert_in
 
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/compute_and_insert_into_ft_a_subscription.hql"
-//flux.inline.post-exec-queries += "INSERT INTO FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_A_SUBSCRIPTION' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  MON.FT_A_SUBSCRIPTION WHERE TRANSACTION_DATE='###SLICE_VALUE###')T"
+//flux.inline.post-exec-queries += "INSERT INTO FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_A_SUBSCRIPTION' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  AGG.FT_A_SUBSCRIPTION WHERE TRANSACTION_DATE='###SLICE_VALUE###')T"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_subsc_activity.hql"
 //flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_subsc.hql"
