--- a/PROD/CONF/SQOOP/sqoop-export-ft-ag-interco.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-ag-interco.conf
@@ -25,7 +25,7 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1000, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM MON.FT_AG_INTERCO WHERE SDATE='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM AGG.FT_AG_INTERCO WHERE SDATE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -33,7 +33,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT TABLE_NAME,SDATE,HEURE,USAGE_APPEL,TYPE_APPEL,TYPE_ABONNE,TYPE_HEURE,REC_TYPE,CALLER_SUBR,PARTNER_ID,PARTNER_GT,CRA_SRC,BASIC_SERV,PARTNER_GT_LEN,PARTNER_ID_LEN,CALLER_SUBR_LEN,PARTNER_ID_PREFIX,PARTNER_GT_PREFIX,TRUNCK_OUT,TRUNCK_IN,DURATION,CRA_COUNT,INSERTED_DATE,CALLEDNUMBER,CALLINGNUMBER,SERVICECENTRE,SERVICECENTRE_PREFIX,SERVICECENTRE_LEN,OPERATOR_CODE,MSC_LOCATION FROM MON.FT_AG_INTERCO WHERE SDATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT TABLE_NAME,SDATE,HEURE,USAGE_APPEL,TYPE_APPEL,TYPE_ABONNE,TYPE_HEURE,REC_TYPE,CALLER_SUBR,PARTNER_ID,PARTNER_GT,CRA_SRC,BASIC_SERV,PARTNER_GT_LEN,PARTNER_ID_LEN,CALLER_SUBR_LEN,PARTNER_ID_PREFIX,PARTNER_GT_PREFIX,TRUNCK_OUT,TRUNCK_IN,DURATION,CRA_COUNT,INSERTED_DATE,CALLEDNUMBER,CALLINGNUMBER,SERVICECENTRE,SERVICECENTRE_PREFIX,SERVICECENTRE_LEN,OPERATOR_CODE,MSC_LOCATION FROM AGG.FT_AG_INTERCO WHERE SDATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_AG_INTERCO_FINAL"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_AG_INTERCO_FINAL"
