--- a/PROD/CONF/SQOOP/sqoop-export-fta-data-transfer.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-data-transfer.conf
@@ -25,7 +25,7 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM MON.FT_A_DATA_TRANSFER WHERE EVENT_DATE='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM AGG.FT_A_DATA_TRANSFER WHERE EVENT_DATE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -33,7 +33,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT EVENT_DATE ,NB_TRANSFERS ,BYTES_DEBITED ,BYTES_CREDITED ,MONTANT_FRAIS ,BUNDLE ,NB_DISTINCT_DAILY_SENDERS ,NB_DISTINCT_DAILY_RECEIVERS ,NB_DISTINCT_DAILY_USERS ,SENDER_OPERATOR_CODE ,RECEIVER_OPERATOR_CODE ,SENDER_OFFER_PROFILE_CODE ,RECEIVER_OFFER_PROFILE_CODE ,INSERT_DATE FROM MON.FT_A_DATA_TRANSFER WHERE EVENT_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT EVENT_DATE ,NB_TRANSFERS ,BYTES_DEBITED ,BYTES_CREDITED ,MONTANT_FRAIS ,BUNDLE ,NB_DISTINCT_DAILY_SENDERS ,NB_DISTINCT_DAILY_RECEIVERS ,NB_DISTINCT_DAILY_USERS ,SENDER_OPERATOR_CODE ,RECEIVER_OPERATOR_CODE ,SENDER_OFFER_PROFILE_CODE ,RECEIVER_OFFER_PROFILE_CODE ,INSERT_DATE FROM AGG.FT_A_DATA_TRANSFER WHERE EVENT_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_DATA_TRANSFER"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_DATA_TRANSFER"
