--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity-post.conf
@@ -39,6 +39,6 @@ flux.hive.extra-conf += "--hivevar date_offset=20"
 flux.hive.extra-conf += "--hivevar table_type=FTA"
 flux.hive.extra-conf += "--hivevar table_name=FT_A_DATA_TRANSFER"
 flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_A_DATA_TRANSFER"
+flux.hive.extra-conf += "--hivevar database_table_name=AGG.FT_A_DATA_TRANSFER"
 flux.hive.extra-conf += "--hivevar table_partition=EVENT_DATE"
 
