--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf
@@ -27,7 +27,7 @@ flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
 flux.inline.exec-queries += "ANALYZE TABLE MON.FT_CRA_GPRS PARTITION(SESSION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
-//flux.inline.exec-queries += "ALTER TABLE MON.FT_A_GPRS_ACTIVITY DROP PARTITION(DATECODE = '###SLICE_VALUE###')"
+//flux.inline.exec-queries += "ALTER TABLE AGG.FT_A_GPRS_ACTIVITY DROP PARTITION(DATECODE = '###SLICE_VALUE###')"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_a_gprs_activity.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gprs_activity.hql"
