--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-subscriber-summary.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-subscriber-summary.conf
@@ -28,7 +28,7 @@ flux.inline.exec-queries += "SET hive.exec.reducers.max=1"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/PARC/compute_and_insert_into_ft_a_subscriber_summary.hql"
 
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
-flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_A_SUBSCRIBER_SUMMARY PARTITION(DATECODE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.post-exec-queries += "ANALYZE TABLE AGG.FT_A_SUBSCRIBER_SUMMARY PARTITION(DATECODE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
 flux.inline.post-exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.post-exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.post-exec-queries += "set hive.exec.parallel=true"
