--- a/PROD/CONF/IN_ZTE/FT/load-ft-credit-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-credit-transfer.conf
@@ -24,7 +24,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/CREDIT_TRANSFER/prequery_ft_cr
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/CREDIT_TRANSFER/compute_and_insert_into_ft_credit_transfer.hql"
 
-flux.inline.post-exec-queries += "DELETE FROM MON.FT_A_CREDIT_TRANSFER_REVENUE WHERE REFILL_DATE = '###SLICE_VALUE###'"
+flux.inline.post-exec-queries += "DELETE FROM AGG.FT_A_CREDIT_TRANSFER_REVENUE WHERE REFILL_DATE = '###SLICE_VALUE###'"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/CREDIT_TRANSFER/compute_and_insert_into_ft_a_credit_transfer_revenue.hql"
 
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
