--- a/PROD/CONF/MSC/load-ft-ag-interco.conf
+++ b/PROD/CONF/MSC/load-ft-ag-interco.conf
@@ -44,6 +44,6 @@ flux.hive.extra-conf += "--hivevar date_offset=90"
 flux.hive.extra-conf += "--hivevar table_type=FTA"
 flux.hive.extra-conf += "--hivevar table_name=FT_AG_INTERCO"
 flux.hive.extra-conf += "--hivevar insert_date_column=INSERTED_DATE"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_AG_INTERCO"
+flux.hive.extra-conf += "--hivevar database_table_name=AGG.FT_AG_INTERCO"
 flux.hive.extra-conf += "--hivevar table_partition=SDATE"
 
