--- a/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity-post.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity-post.conf
@@ -30,7 +30,7 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM MON.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM AGG.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -38,7 +38,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT * FROM MON.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT * FROM AGG.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_GPRS_ACTIVITY_POST"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_GPRS_ACTIVITY_POST"
