--- a/PROD/CONF/SQOOP/sqoop-export-fta-subscription.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-subscription.conf
@@ -32,7 +32,7 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM MON.FT_A_SUBSCRIPTION WHERE TRANSACTION_DATE='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM AGG.FT_A_SUBSCRIPTION WHERE TRANSACTION_DATE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -40,7 +40,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT TRANSACTION_DATE, TRANSACTION_TIME,CONTRACT_TYPE ,OPERATOR_CODE ,MAIN_USAGE_SERVICE_CODE ,COMMERCIAL_OFFER ,PREVIOUS_COMMERCIAL_OFFER,SUBS_SERVICE ,SUBS_BENEFIT_NAME ,SUBS_CHANNEL ,SUBS_RELATED_SERVICE ,SUBS_TOTAL_COUNT,SUBS_AMOUNT ,SOURCE_PLATFORM ,SOURCE_DATA ,INSERT_DATE ,SERVICE_CODE ,MSISDN_COUNT ,SUBS_EVENT_RATED_COUNT ,SUBS_PRICE_UNIT FROM MON.FT_A_SUBSCRIPTION WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT TRANSACTION_DATE, TRANSACTION_TIME,CONTRACT_TYPE ,OPERATOR_CODE ,MAIN_USAGE_SERVICE_CODE ,COMMERCIAL_OFFER ,PREVIOUS_COMMERCIAL_OFFER,SUBS_SERVICE ,SUBS_BENEFIT_NAME ,SUBS_CHANNEL ,SUBS_RELATED_SERVICE ,SUBS_TOTAL_COUNT,SUBS_AMOUNT ,SOURCE_PLATFORM ,SOURCE_DATA ,INSERT_DATE ,SERVICE_CODE ,MSISDN_COUNT ,SUBS_EVENT_RATED_COUNT ,SUBS_PRICE_UNIT FROM AGG.FT_A_SUBSCRIPTION WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_SUBSCRIPTION"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_SUBSCRIPTION"
