--- a/PROD/CONF/VAS/load-ft-a-vas-revenue-daily.conf
+++ b/PROD/CONF/VAS/load-ft-a-vas-revenue-daily.conf
@@ -35,7 +35,7 @@ flux.hive.extra-conf += "--hivevar date_offset=32"
 
 flux.hive.extra-conf += "--hivevar table_type=FTA"
 flux.hive.extra-conf += "--hivevar table_name=FT_A_VAS_REVENUE_DAILY"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_A_VAS_REVENUE_DAILY"
+flux.hive.extra-conf += "--hivevar database_table_name=AGG.FT_A_VAS_REVENUE_DAILY"
 flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_DATE"
 
 
