--- a/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf
@@ -25,7 +25,7 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR >=14, 'OK', 'NOK') FROM
-(SELECT COUNT(DISTINCT SOURCE_DATA) NBR  FROM REPORT.FT_GLOBAL_ACTIVITY_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###') A
+(SELECT COUNT(DISTINCT SOURCE_DATA) NBR  FROM agg.FT_GLOBAL_ACTIVITY_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -33,7 +33,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT COMMERCIAL_OFFER_CODE, TRANSACTION_TYPE, SUB_ACCOUNT, TRANSACTION_SIGN, SOURCE_PLATFORM, SOURCE_DATA, SERVED_SERVICE, SERVICE_CODE, DESTINATION, OTHER_PARTY_ZONE, MEASUREMENT_UNIT, RATED_COUNT, RATED_VOLUME, TAXED_AMOUNT, UNTAXED_AMOUNT, INSERT_DATE , TRAFFIC_MEAN, OPERATOR_CODE, TRANSACTION_DATE FROM REPORT.FT_GLOBAL_ACTIVITY_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT COMMERCIAL_OFFER_CODE, TRANSACTION_TYPE, SUB_ACCOUNT, TRANSACTION_SIGN, SOURCE_PLATFORM, SOURCE_DATA, SERVED_SERVICE, SERVICE_CODE, DESTINATION, OTHER_PARTY_ZONE, MEASUREMENT_UNIT, RATED_COUNT, RATED_VOLUME, TAXED_AMOUNT, UNTAXED_AMOUNT, INSERT_DATE , TRAFFIC_MEAN, OPERATOR_CODE, TRANSACTION_DATE FROM agg.FT_GLOBAL_ACTIVITY_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_GLOBAL_ATV_DAILY"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_GLOBAL_ACTIVITY_DAILY"
