--- a/PROD/CONF/analyze_compute_statistics.conf
+++ b/PROD/CONF/analyze_compute_statistics.conf
@@ -33,4 +33,4 @@ flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_ZTE_DATA PARTITION(START_DATE=
 //flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_CRA_MSC_HUAWEI PARTITION(CALLDATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
 //flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_SMSC_MVAS_A2P PARTITION(WRITE_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
 flux.inline.exec-queries += "ANALYZE TABLE MON.FT_CONTRACT_SNAPSHOT PARTITION(EVENT_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
-flux.inline.exec-queries += "ANALYZE TABLE REPORT.FT_GLOBAL_ACTIVITY_DAILY PARTITION(TRANSACTION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.exec-queries += "ANALYZE TABLE agg.FT_GLOBAL_ACTIVITY_DAILY PARTITION(TRANSACTION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
