--- a/PROD/CONF/SQOOP/sqoop-export-ft-gsm-traffic-revenue-daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-gsm-traffic-revenue-daily.conf
@@ -32,7 +32,7 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM MON.FT_GSM_TRAFFIC_REVENUE_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM AGG.FT_GSM_TRAFFIC_REVENUE_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -40,7 +40,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT TRANSACTION_HOUR,OFFER_PROFILE_CODE ,SERVICE_CODE ,DESTINATION ,CALL_DESTINATION_CODE ,OTHER_PARTY_ZONE ,SPECIFIC_TARIFF_INDICATOR ,CITYZONE_NUMBER ,TVA ,TOTAL_COUNT ,RATED_TOTAL_COUNT ,DURATION ,RATED_DURATION ,MAIN_RATED_AMOUNT ,PROMO_RATED_AMOUNT ,RATED_AMOUNT ,MAIN_DISCARDED_CREDIT ,PROMO_DISCARDED_CREDIT ,SMS_DISCARDED_VOLUME ,SMS_USED_VOLUME ,SOURCE_PLATFORM ,SOURCE_DATA ,INSERT_DATE ,SUB_SERVICE ,SERVED_SERVICE ,OTHER_PARTY_PRESENT ,CREDIT_AMOUNT ,DEBIT_AMOUNT ,TARIFF_PLAN ,PROMO_RATED_AMOUNT_PROMO ,PROMO_RATED_AMOUNT_ONNET ,PROMO_RATED_AMOUNT_XPRESS ,RATED_AMOUNT_DETAILS ,OPERATOR_CODE ,TIME_USED_VOLUME ,BUNDLE_SMS_USED_VOLUME ,TRANSACTION_DATE FROM MON.FT_GSM_TRAFFIC_REVENUE_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT TRANSACTION_HOUR,OFFER_PROFILE_CODE ,SERVICE_CODE ,DESTINATION ,CALL_DESTINATION_CODE ,OTHER_PARTY_ZONE ,SPECIFIC_TARIFF_INDICATOR ,CITYZONE_NUMBER ,TVA ,TOTAL_COUNT ,RATED_TOTAL_COUNT ,DURATION ,RATED_DURATION ,MAIN_RATED_AMOUNT ,PROMO_RATED_AMOUNT ,RATED_AMOUNT ,MAIN_DISCARDED_CREDIT ,PROMO_DISCARDED_CREDIT ,SMS_DISCARDED_VOLUME ,SMS_USED_VOLUME ,SOURCE_PLATFORM ,SOURCE_DATA ,INSERT_DATE ,SUB_SERVICE ,SERVED_SERVICE ,OTHER_PARTY_PRESENT ,CREDIT_AMOUNT ,DEBIT_AMOUNT ,TARIFF_PLAN ,PROMO_RATED_AMOUNT_PROMO ,PROMO_RATED_AMOUNT_ONNET ,PROMO_RATED_AMOUNT_XPRESS ,RATED_AMOUNT_DETAILS ,OPERATOR_CODE ,TIME_USED_VOLUME ,BUNDLE_SMS_USED_VOLUME ,TRANSACTION_DATE FROM AGG.FT_GSM_TRAFFIC_REVENUE_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_GSM_TF_REV_DAILY"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_GSM_TRAFFIC_REV_DAILY"
