--- a/PROD/CONF/SQOOP/sqoop-export-ft-x-interco-final.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-x-interco-final.conf
@@ -32,7 +32,7 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 2000, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM MON.FT_X_INTERCO_FINAL WHERE SDATE='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM AGG.FT_X_INTERCO_FINAL WHERE SDATE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -40,7 +40,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT SRC,CRA_SRC,SDATE,HEURE,FAISCEAU,USAGE_APPEL,INDICATION_APPEL,TYPE_APPEL,TYPE_ABONNE,DESTINATION_APPEL,TYPE_HEURE,NBRE_APPEL,DUREE_APPEL,INSERTED_DATE,OPERATOR_CODE FROM MON.FT_X_INTERCO_FINAL WHERE SDATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT SRC,CRA_SRC,SDATE,HEURE,FAISCEAU,USAGE_APPEL,INDICATION_APPEL,TYPE_APPEL,TYPE_ABONNE,DESTINATION_APPEL,TYPE_HEURE,NBRE_APPEL,DUREE_APPEL,INSERTED_DATE,OPERATOR_CODE FROM AGG.FT_X_INTERCO_FINAL WHERE SDATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_X_INTERCO_FINAL"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_X_INTERCO_FINAL"
