change LOAD_FT_A_SUBSCRIBER_SUMMARY.CONF to LOAD_FT_A_SUBSCRIBER_SUMMARY in compute kpi IN cron task

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -52,7 +52,7 @@ crontasks +=
 
 crontasks +=
   {
-    instanceId = "load-ft-a-subscriber-summary.conf",
+    instanceId = "LOAD_FT_A_SUBSCRIBER_SUMMARY",
     cron = "0 4 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-subscriber-summary.conf",
     taskType = "HIVE"
@@ -68,7 +68,7 @@ crontasks +=
   {
     instanceId = "LOAD_FT_CBM_CUST_INSIGTH_DAILY",
     cron = "0 6 */1 * * ?",
-    configFile = "/PROD/CONF/CBM/load-ft-cbm-cust-insigth-daily.conf",
+    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-cbm-cust-insigth-daily.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "55 minutes"
@@ -83,7 +83,7 @@ crontasks +=
   {
     instanceId = "LOAD_FT_VOICE_SMS_DA_USAGE_DAILY",
     cron = "0 8 */1 * * ?",
-    configFile = "/PROD/CONF/CBM/DA_USAGE_DAILY/load-ft-voice-sms-da-usage-daily.conf",
+    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-voice-sms-da-usage-daily.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "55 minutes"
@@ -98,7 +98,7 @@ crontasks +=
   {
     instanceId = "LOAD_FT_DATA_DA_USAGE_DAILY",
     cron = "0 10 */1 * * ?",
-    configFile = "/PROD/CONF/CBM/DA_USAGE_DAILY/load-ft-data-da-usage-daily.conf",
+    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-data-da-usage-daily.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "55 minutes"
@@ -113,7 +113,7 @@ crontasks +=
   {
     instanceId = "LOAD_FT_CBM_DA_USAGE_DAILY",
     cron = "0 12 */1 * * ?",
-    configFile = "/PROD/CONF/CBM/DA_USAGE_DAILY/load-ft-cbm-da-usage-dally.conf",
+    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-cbm-da-usage-dally.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "55 minutes"
