create conf for periodic deletion of IT'S partitions

--- a/PROD/CONF/drop_it_partitions.conf
+++ b/PROD/CONF/drop_it_partitions.conf
@@ -3,7 +3,7 @@ flux.log-level = "ERROR"
 
 flux.name = "DROP_IT_PARTITIONS"
 
-flux.has-date-processing = true
+flux.has-date-processing = false
 
 flux.slice-value-type = "DAILY"
 flux.slice-begin-value = -7
