--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -138,3 +138,173 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+
+crontasks +=
+  {
+    instanceId = "FT_OG_IC_CALL_SNAPSHOT",
+    cron = "0 16 */1 * * ?",
+    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-og-ic-call-snapshot.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+
+crontasks +=
+  {
+    instanceId = "FT_ACCOUNT_ACTIVITY",
+    cron = "0 18 */1 * * ?",
+    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_A_REFILL_RECEIVER",
+    cron = "0 20 */1 * * ?",
+    configFile = "/PROD/CONF/FT_A_REFILL_RECEIVER/load-ft-a-refill-receiver.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_A_REFILL_REVENUE",
+    cron = "0 22 */1 * * ?",
+    configFile = "/PROD/CONF/FT_A_REFILL_REVENUE/load-ft-a-refill-revenue.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_CBM_BUNDLE_SUBS_DAILY",
+    cron = "0 24 */1 * * ?",
+    configFile = "/PROD/CONF/FT_CBM_BUNDLE_SUBS_DAILY/load-ft-cbm-bundle-subs-daily.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_CBM_CHURN_DAILY",
+    cron = "0 26 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-cbm-churn-daily.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_CBM_CUST_INSIGTH_DAILY",
+    cron = "0 28 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-cbm-cust-insigth-daily.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_CBM_DOLA_DAILY",
+    cron = "0 30 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-cbm-dola-daily.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_CLIENT_LAST_SITE_DAY",
+    cron = "0 32 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-client-last-site-day.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_CLIENT_SITE_TRAFFIC_DAY",
+    cron = "0 34 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-client-site-traffic-day.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_EMERGENCY_CREDIT_ACTIVITY",
+    cron = "0 36 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-emergency-credit-activity.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
